--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 	branch = PXC-702
 [submodule "wsrep-lib"]
 	path = wsrep-lib
-	url = https://github.com/percona/wsrep-lib.git
-	branch = percona-4.x-8.0
+	url = https://github.com/kamil-holubicki/wsrep-lib.git
+	branch = PXC-702
 [submodule "extra/coredumper"]
 	path = extra/coredumper
 	url = https://github.com/Percona-Lab/coredumper.git
