--- a/mysql-test/suite/galera/galera_3nodes_as_slave.cnf
+++ b/mysql-test/suite/galera/galera_3nodes_as_slave.cnf
@@ -70,6 +70,18 @@ innodb_autoinc_lock_mode=2
 
 innodb_flush_log_at_trx_commit=2
 
+[mysqld.1]
+loose_keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.1/keyring.1
+
+[mysqld.2]
+loose_keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.2/keyring.2
+
+[mysqld.3]
+loose_keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.3/keyring.3
+
+[mysqld.4]
+loose_keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.4/keyring.4
+
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
 NODE_MYSOCK_1= @mysqld.1.socket
