--- a/mysql-test/suite/galera/galera_2nodes.cnf
+++ b/mysql-test/suite/galera/galera_2nodes.cnf
@@ -3,7 +3,7 @@
 
 [mysqld]
 default-storage-engine=InnoDB
-loose-mysqlx=0
+loose_mysqlx=0
 
 [mysqld.1]
 log-bin=mysqld-bin
@@ -49,10 +49,12 @@ innodb_autoinc_lock_mode=2
 innodb_flush_log_at_trx_commit=2
 
 [mysqld.1]
-loose_keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.1/keyring.1
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.1/keyring.1
 
 [mysqld.2]
-loose_keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.2/keyring.2
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.2/keyring.2
 
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
