--- a/mysql-test/suite/galera/galera_2nodes_as_master_with_repl_filter.cnf
+++ b/mysql-test/suite/galera/galera_2nodes_as_master_with_repl_filter.cnf
@@ -72,13 +72,16 @@ enforce-gtid-consistency=true
 event-scheduler=1
 
 [mysqld.1]
-loose_keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.1/keyring.1
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.1/keyring.1
 
 [mysqld.2]
-loose_keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.2/keyring.2
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.2/keyring.2
 
 [mysqld.3]
-loose_keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.3/keyring.3
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.3/keyring.3
 
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
