--- a/mysql-test/suite/galera/galera_2nodes_as_master_slave.cnf
+++ b/mysql-test/suite/galera/galera_2nodes_as_master_slave.cnf
@@ -16,7 +16,7 @@ log-bin=mysqld-bin
 binlog-format=row
 gtid-mode=on
 enforce-gtid-consistency=true
-loose_mysqlx=0
+mysqlx=0
 
 [mysqld.1]
 server-id=1
