--- a/mysql-test/suite/galera_3nodes/galera_3nodes.cnf
+++ b/mysql-test/suite/galera_3nodes/galera_3nodes.cnf
@@ -5,7 +5,7 @@
 default-storage-engine=InnoDB
 binlog-format=row
 wsrep_provider=@ENV.WSREP_PROVIDER
-loose_mysqlx=0
+mysqlx=0
 
 # enforce read-committed characteristics across the cluster
 
