--- a/mysql-test/suite/galera/t/galera_as_master_multisource.cnf
+++ b/mysql-test/suite/galera/t/galera_as_master_multisource.cnf
@@ -58,6 +58,18 @@ log-bin=mysqld-bin
 binlog-format=row
 server-id=1
 
+[mysqld.1]
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.1/keyring.1
+
+[mysqld.2]
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.2/keyring.2
+
+[mysqld.3]
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.3/keyring.3
+
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
 NODE_MYSOCK_1= @mysqld.1.socket
