--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,11 @@
 [submodule "percona-xtradb-cluster-galera"]
 	path = percona-xtradb-cluster-galera
-	url = https://github.com/percona/galera
-	branch = 4.x-8.0
+	url = https://github.com/kamil-holubicki/galera
+	branch = PXC-702-1
 [submodule "wsrep-lib"]
 	path = wsrep-lib
-	url = https://github.com/percona/wsrep-lib.git
-	branch = percona-4.x-8.0
+	url = https://github.com/kamil-holubicki/wsrep-lib.git
+	branch = PXC-702
 [submodule "extra/coredumper"]
 	path = extra/coredumper
 	url = https://github.com/Percona-Lab/coredumper.git
