--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "percona-xtradb-cluster-galera"]
 	path = percona-xtradb-cluster-galera
 	url = https://github.com/kamil-holubicki/galera
-	branch = PXC-702-1
+	branch = PXC-702-1-enc-on
 [submodule "wsrep-lib"]
 	path = wsrep-lib
 	url = https://github.com/kamil-holubicki/wsrep-lib.git
