--- a/mysql-test/suite/galera/galera_optimistic_pa.cnf
+++ b/mysql-test/suite/galera/galera_optimistic_pa.cnf
@@ -3,3 +3,11 @@ wsrep_provider_options='cert.optimistic_pa=yes;repl.causal_read_timeout=PT90S;ba
 
 [mysqld.2]
 wsrep_provider_options='cert.optimistic_pa=yes;repl.causal_read_timeout=PT90S;base_port=@mysqld.2.#galera_port;gmcast.peer_timeout=PT10S;evs.suspect_timeout=PT12S;evs.inactive_timeout=PT30S;evs.install_timeout=PT15S'
+
+[mysqld.1]
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.1/keyring.1
+
+[mysqld.2]
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.2/keyring.2
