--- a/mysql-test/suite/wsrep/my.cnf
+++ b/mysql-test/suite/wsrep/my.cnf
@@ -13,6 +13,10 @@ wsrep_cluster_address='gcomm://'
 wsrep_node_address=127.0.0.1
 wsrep_node_name=node1
 
+[mysqld.1]
+early_plugin_load=keyring_file.so
+keyring_file_data=@ENV.MYSQL_TMP_DIR/mysqld.1/keyring.1
+
 [ENV]
 GALERA_BASE_PORT=@mysqld.1.#galera_port
 
